--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+
+<html>
 <head>
     <link rel="stylesheet" href="styles.css">
+    <title>Aluraflix</title>
 </head>
 
 body {
@@ -8,13 +11,20 @@ body {
 }
 
 
-
-
-<header>ALURAFLIX</header>
-
-<h1>Como Derrotar os ANIMATRÔNICOS POSSUÍDOS em "FIVE NIGHTS AT FREDDY’S" (FNAF)
-</h1>
+<sectio
+<div>
+<h1>Como Derrotar os ANIMATRÔNICOS POSSUÍDOS em "FIVE NIGHTS AT FREDDY’S" (FNAF)</h1>
 <p>#fnaf</p>
+</div>
 
-
+  <section>
+<div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ssedBbn0EpA?si=BGVcowuIUPIo6KPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+<section>
+
+</body>
+
+
+<html>
