--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
-<html>
+<html lang="pt-br">
+</html>
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Aluraflix</title>
@@ -11,7 +12,7 @@ body {
 }
 
 
-<sectio
+<sectio>
 <div>
 <h1>Como Derrotar os ANIMATRÔNICOS POSSUÍDOS em "FIVE NIGHTS AT FREDDY’S" (FNAF)</h1>
 <p>#fnaf</p>
